concord_macros/tests/dsl/fail/fail_raw_secret_in_route_atom.stderr
error: secret references are only allowed in credential declarations
  --> tests/dsl/fail/fail_raw_secret_in_route_atom.rs:11:11
   |
11 |     path [r#secret.token]
   |           ^^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_raw_secret_in_route_atom.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
